--- a/src/Components/Coding/codingStyle.css
+++ b/src/Components/Coding/codingStyle.css
@@ -1,31 +1,67 @@
 /* #3dd7ac
 #5d3ede
 #03000f */
-
+*{
+    margin: 0;
+    padding: 0;
+}
 .coding{
 display: flex;
+height: 100vh;
+font-family: 'Fira Sans';
+
 }
 .title-sec{
-width: 60%;
+width: 65%;
 display: flex;
 justify-content: space-between;
+align-items: center;
 color: #3dd7ac;
 }
 .title-sec > div{
-    margin-left: -15px;
-    font-size: 2em;
+    margin-left: -21px;
+    font-size: 3em;
     align-self: flex-end;
-}
-.title-sec > div > span{
     
 }
+.title-sec > div > span{
+    text-shadow: 0px 0px 4px #03000f;
+}
+.title-sec > div > span:nth-of-type(2){
+margin-top: -5VH;
+display: block;
+}
+.opc-chevron{
+    opacity: 0.5;
+}
 .title-sec >h1{
-    font-size: 3em;
+    font-size: 5em;
+    font-weight: 800;
+    text-align: left;
+}
+.title-sec >h1 > span{
+ -webkit-text-stroke-color: #3dd7ac;
+ -webkit-text-stroke-width: 2px;
+ color: white;
 }
 .title-sec >h5{
     transform: rotate(90deg);
 }
 .img-sec{
-width: 32%;
+width: 35%;
 background-color: #03000f;
+display: flex;
+color: white;
+justify-content: space-between;
+align-items: center;
+padding-left: 5%;
+}
+.img-sec >h1{
+align-self: flex-start;
+}
+.img-sec >div{
+    width: 50%;
+}
+.img-sec > div >img{
+width: 100%;
 }
