--- a/src/Components/Form/form.css
+++ b/src/Components/Form/form.css
@@ -1,28 +1,28 @@
-@import url('https://fonts.googleapis.com/css?family=Fira+Sans:400,700&display=swap');
-/* font-family: 'Fira Sans'; */
-/* -webkit-text-fill-color: #03000F;
--webkit-text-stroke-width: 1px;
--webkit-text-stroke-color: #3DD7AC; */
 body{
     background-color: #03000F;
-    font-family: 'Fira Sans';
 }
 h1{ color: #3dd7ac;
     text-align:left;
+    font-family: 'Fira Sans', sans-serif;
+    font-weight: 900;
+    font-size: 2.4em;
+    font-variant-position: super;
 }
-h2{ font-size: 0.8em;
+h2{ 
     color: #3dd7ac;
+    font-size: 0.77em;
     text-align: left;
+    font-family: 'Fira Sans', sans-serif;
+    font-weight: 400;
 }
 form{
     display: flex;
     flex-direction: column;
-    float: right;
-    width: 50%;
+    margin-bottom: 20%;
 }
 form > input{
     font-size: 1.25em;
-    border: 1px solid #fff;
+    border: 2px solid #fff;
     background-color: #03000F;
     color: #fff;
 }
@@ -43,3 +43,18 @@ button:hover{
     color: #03000F;
     transition: 1s;
 }
+span{
+    -webkit-text-fill-color: #03000F;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #3DD7AC;
+}
+main{
+    margin-left: 5%;
+    margin-top: 2.5%;
+    display: grid;
+    grid-template-columns: 40% 50%;
+    justify-content: center;
+}
+::placeholder {
+    color: #fff;
+  }
