--- a/src/Components/Coding/codingStyle.css
+++ b/src/Components/Coding/codingStyle.css
@@ -9,6 +9,7 @@
 display: flex;
 height: 100vh;
 font-family: 'Fira Sans';
+overflow: hidden;
 
 }
 .title-sec{
@@ -17,6 +18,8 @@ display: flex;
 justify-content: space-between;
 align-items: center;
 color: #3dd7ac;
+position: relative;
+z-index: 1;
 }
 .title-sec > div{
     margin-left: -21px;
@@ -25,14 +28,15 @@ color: #3dd7ac;
     
 }
 .title-sec > div > span{
-    text-shadow: 0px 0px 4px #03000f;
+    text-shadow: 0px 0px 4px #03000f;    
 }
 .title-sec > div > span:nth-of-type(2){
 margin-top: -5VH;
 display: block;
 }
 .opc-chevron{
-    opacity: 0.5;
+    opacity: 0.2;
+    transition: 0.5s;
 }
 .title-sec >h1{
     font-size: 5em;
@@ -46,22 +50,148 @@ display: block;
 }
 .title-sec >h5{
     transform: rotate(90deg);
+    color: #5d3ede;
+    font-weight: 300;
+    font-size: 1em;
+    letter-spacing: 2px;
+    justify-self: flex-end;
+}
+.fa-phone{
+    color: rgb(255, 0, 0);
+    transform: rotate(270deg);
 }
 .img-sec{
-width: 35%;
-background-color: #03000f;
-display: flex;
-color: white;
-justify-content: space-between;
-align-items: center;
-padding-left: 5%;
+    width: 35%;
+    height: 100vh;
+    overflow: hidden;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 25% 25% 25% 25%;
+    color: white;
 }
-.img-sec >h1{
-align-self: flex-start;
+.img-sec > img{
+    width: 100%;
+    height: 100%;
+    grid-row: 2/4;
+    grid-column: 2/3;
 }
-.img-sec >div{
-    width: 50%;
+.star-div1{
+    grid-row: 1/2;
+    grid-column: 1/3;
+    background-color: #03000f;
+    display: grid;
+    grid-template-columns: repeat(10,1fr);
+    grid-template-rows: repeat(5,1fr);
 }
-.img-sec > div >img{
-width: 100%;
+.star-div2{
+    grid-row: 2/4;
+    grid-column: 1/2;
+    background-color: #03000f;
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    grid-template-rows: repeat(10,1fr);
+}
+.star-div3{
+    grid-row: 4/5;
+    grid-column: 1/3;
+    background-color: #03000f;
+    display: grid;
+    grid-template-columns: repeat(10,1fr);
+    grid-template-rows: repeat(5,1fr);
+}
+
+@media only screen and (max-width: 1140px){
+    .coding{
+        flex-direction: column;
+        height: 150vh;
+        }
+        .title-sec{
+        width: 100%;
+        display: flex;
+       
+        justify-content: space-between;
+        align-items: center;
+        }
+        .title-sec > div{
+            margin-left: -21px;
+            font-size: 3em;
+
+        }
+        .title-sec > div > span{
+            text-shadow: 0px 0px 4px #03000f;   
+            font-size: 2em; 
+        }
+        .title-sec > div > span:nth-of-type(2){
+        margin-top: -5VH;
+        display: block;
+        }
+        .opc-chevron{
+            opacity: 0.2;
+            transition: 0.5s;
+        }
+        .title-sec >h1{
+            font-size: 7em;
+        }
+        .title-sec >h1 > span{
+
+        }
+        .title-sec >h5{
+            align-self: flex-start;
+            margin-top: -20vh;
+            font-size: 2em;
+        }
+        .fa-phone{
+            color: rgb(0, 0, 0);
+            transform: rotate(270deg);
+        }
+        .img-sec{
+            width: 100%;
+            height: 100vh;
+            display: grid;
+            grid-template-columns: 33% 33% 33%;
+            grid-template-rows: 25% 25% 25% 25%;
+            color: white;
+            background-color: #03000f;
+        }
+        .img-sec > img{
+            grid-column: 1/3;
+        }
+        .star-div1{
+            grid-row: 1/2;
+            grid-column: 1/4;
+            background-color: #03000f;
+            display: grid;
+            grid-template-columns: repeat(10,1fr);
+            grid-template-rows: repeat(5,1fr);
+        }
+        .star-div2{
+            grid-row: 2/4;
+            grid-column: 3/4;
+            display: grid;
+            grid-template-columns: repeat(5,1fr);
+            grid-template-rows: repeat(10,1fr);
+        }
+        .star-div3{
+            grid-row: 4/5;
+            grid-column: 1/4;
+            background-color: #03000f;
+            display: grid;
+            grid-template-columns: repeat(10,1fr);
+            grid-template-rows: repeat(5,1fr);
+        }
+}
+
+
+
+
+
+@media only screen and (max-width: 768px){
+    .star-div2{
+        background-color: red;
+    }  
+}
+@media only screen and (max-width: 576px){
+    .star-div1{
+        background-color: red;
+    }  
 }
