--- a/src/Components/Campus/campusstyle.css
+++ b/src/Components/Campus/campusstyle.css
@@ -1,9 +1,8 @@
 .campussection{
-  background-color: #03000f;
-  height: 500px;
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr;
+  grid-template-columns: 1fr, 1fr, 1fr, 1fr;
+  grid-template-rows: 8.3%, 8.3%, 8.3%, 8.3%, 8.3%, 8.3%, 8.3%, 8.3%, 8.3%, 8.3%, 8.3%, 8.3%, ;
+  font-family: 'Fira Sans';
 }
 
 .campusTitle{
@@ -17,4 +16,18 @@
 .inverted{
   -webkit-text-stroke: 1px #3DD7AC;
   -webkit-text-fill-color: transparent;
+}
+
+.article-whereAreWe{
+  width: 300px;
+  font-size: 16px;
+}
+
+.hashtag{
+  margin-top: 20px;
+}
+
+.image{
+  height: 300px;
+  width: 300px;
 }
