--- a/src/Components/Coding/codingStyle.css
+++ b/src/Components/Coding/codingStyle.css
@@ -9,8 +9,17 @@
 display: flex;
 height: 120vh;
 font-family: 'Fira Sans';
-overflow: hidden;
 background-color: white;
+}
+.test-art{
+    width: 35%;
+    background-color: red;
+}
+.test-art > h1{
+position: sticky;
+    top: 0vh;
+color: blue;
+
 }
 .title-sec{
 width: 65%;
@@ -26,12 +35,12 @@ height: 100vh;
     font-weight: 100;
     align-self: flex-end;
 }
-.title-sec > div > span{
+.title-sec > div > i{
     text-shadow: 0px 0px 4px #03000f;    
 }
-.title-sec > div > span:nth-of-type(2){
-margin-top: -4VH;
+.title-sec > div > i:nth-of-type(2){
 display: block;
+margin-top: -4vh;
 }
 .opc-chevron{
     opacity: 0.2;
@@ -41,6 +50,11 @@ display: block;
     font-size: 5em;
     font-weight: 900;
     text-align: left;
+    transition: 1s;
+}
+.header-title{
+    text-shadow: 0px 0px 10px #3dd7ac;
+    transition: 1s;
 }
 .title-sec >h1 > span{
  -webkit-text-stroke-color: #3dd7ac;
@@ -61,7 +75,7 @@ display: block;
     transform: rotate(270deg);
 }
 .img-sec{
-    width: 35%;
+    width: 100%;
     height: 100vh;
     overflow: hidden;
     display: grid;
@@ -113,7 +127,8 @@ color: white;
 font-size: 2em;
 font-weight: 900;
 align-self: flex-start;
-
+position: sticky;
+    top: 0vh;
 }
 .programming-sec >h1{
 font-size: 2.2em;
@@ -126,6 +141,62 @@ color:  #3dd7ac;
     -webkit-text-stroke: 2px rgb(163, 163, 163);
     color:#5d3ede ;
 }
+.logoc{
+position: sticky;
+top: 5vh;
+text-align: left;
+height: 0;
+padding-left: 5%;
+}
+.logoc >span{
+    margin-bottom: -10vh;
+    font-size: 2em;
+    font-weight: 900;
+    color: white;
+}
+.logosupercode{
+position: sticky;
+color: rgb(255, 255, 255);
+top: 5vh;
+width: 0px;
+}
+.logosupercode > span{
+padding-left: 50px;
+font-weight: 700;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media only screen and (max-width: 1140px){
     .coding{
         flex-direction: column;
