--- a/src/Components/Coding/codingStyle.css
+++ b/src/Components/Coding/codingStyle.css
@@ -50,7 +50,7 @@ margin-top: -4vh;
     transition: 1s;
 }
 .header-title{
-    text-shadow: 0px 0px 10px #3dd7ac;
+    text-shadow: 0px 0px 10px #3f3f3f;
     transition: 1s;
 }
 .title-sec >h1 > span{
