--- a/src/Components/Form/form.css
+++ b/src/Components/Form/form.css
@@ -14,11 +14,14 @@ body{
     text-align: left;
     font-family: 'Fira Sans', sans-serif;
     font-weight: 400;
+    grid-column: 1/2;
 }
 form{
     display: flex;
     flex-direction: column;
     margin-bottom: 20%;
+    grid-row: 1/-1;
+    grid-column: 2/3;
 }
 form > input{
     padding-left: 10px;
@@ -55,6 +58,7 @@ button:hover{
     display: grid;
     grid-template-columns: 40% 50%;
     justify-content: center;
+    padding-top: 20vh;
 }
 ::placeholder {
     color: #fff;
