--- a/src/Components/Coding/codingStyle.css
+++ b/src/Components/Coding/codingStyle.css
@@ -44,10 +44,13 @@ margin-top: -4vh;
     transition: 0.5s;
 }
 .title-sec >h1{
-    font-size: 5em;
+    font-size: 4.5em;
     font-weight: 900;
     text-align: left;
     transition: 1s;
+    width: 60%;
+    line-height: 10vh;
+    letter-spacing: -2px;
 }
 .header-title{
     text-shadow: 0px 0px 10px #3f3f3f;
@@ -65,6 +68,7 @@ margin-top: -4vh;
     font-size: 1em;
     letter-spacing: 2px;
     justify-self: flex-end;
+    width: 20%;
 }
 .fa-phone{
     color: teal;
@@ -183,27 +187,37 @@ body{
         height: fit-content;
 }
 .title-sec{
-            width: 100%;
+            width: 95%;
             display: grid;
             grid-template-columns: 33% 33% 33% ;
             grid-template-rows: 20% 40% 40%;
+            padding-left: 5%;
 }
 .title-sec > div{
             grid-column: 2/3;
+            grid-row: 2/3;
+           align-self: baseline;
+           margin-top: 10vh;
 }
 .title-sec > div > i:nth-of-type(2){
         margin-top: -2vh;
 }
 .title-sec >h1{
             grid-row: 2/4;
+            grid-column: 1/4;
             font-size: 5em;
-            padding-left: 20%;
+
+            width: 100%;
 }
 .title-sec >h5{
             grid-column: 3/-1;
             grid-row: 1/3;
-            margin-top: -90vh;
-            font-weight: 900;
+            font-weight: 600;
+            width: 200px;
+            margin-top: -95vh;
+            margin-right: -35%;
+            letter-spacing: 3px;
+            font-size: 1.5em;
 }
 .test-art{
             width: 100%;
@@ -219,20 +233,23 @@ body{
             grid-row: 2/-1;
             grid-column: 1/3;
             margin-top: 10vh;
+            height: 60vh;
 }
 .star-div1{
             grid-column: 1/-1;
+            grid-row: 1/3;
 }
 .star-div2{
-            grid-row: 2/-1;
-            grid-column: 1/-1;
+    display: none;
 }
 .star-div3{
-            display: none;
+    grid-column: 1/-1;
+    grid-row: 3/4;
 }
 .programming-sec{
             display: block;
             height: 100vh;
+            padding-top: 10vh;
 }
 .programming-sec >h1{
             margin: 10vh 1%;
@@ -240,10 +257,12 @@ body{
             font-size: 4em;
 }
 .programming-sec >span:nth-of-type(2){
-            font-size: 20em;
+            font-size: 22em;
 }
 .logoc{
 position: static;
+margin-bottom: -5vh;
+font-size: 2em;
 }
 .logosupercode{
         color: #ffffff;
