--- a/src/Components/Coding/codingStyle.css
+++ b/src/Components/Coding/codingStyle.css
@@ -77,7 +77,6 @@ margin-top: -4vh;
 }
 .img-sec{
     width: 100%;
-    height: 100vh;
     overflow: hidden;
     display: grid;
     grid-template-columns: 50% 50%;
@@ -123,7 +122,7 @@ margin-top: -4vh;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 2vh 5%;
+    padding: 2vh 5% 2vh 5%;
 }
 .programming-sec >span:nth-of-type(1){
 color: white;
