--- a/src/Components/Campus/campusstyle.css
+++ b/src/Components/Campus/campusstyle.css
@@ -1,63 +1,71 @@
-.campussection{
+.grid{
   display: grid;
-  grid-template-columns: 1fr, 1fr, 1fr, 1fr;
-  grid-template-rows: 8.3%, 8.3%, 8.3%, 8.3%, 8.3%, 8.3%, 8.3%, 8.3%, 8.3%, 8.3%, 8.3%, 8.3%, ;
-  font-family: 'Fira Sans';
-
+  grid-template-columns: repeat(12,1fr);
+  grid-template-rows: repeat(10,1fr);
+  width: 100%;
+  height: 150vh;
 }
-
-.campusTitle{
-  font-size: 30px;
+.photo1{
+  margin-top: -10vh;
+  margin-left: -30%;
+  width: 100%;
+  height: 100%;
+  grid-row: 1/3;
+  grid-column: 1/4;
 }
-
+.photo2{
+  width: 100%;
+  height: 100%;
+  grid-row: 1/3;
+  grid-column: 10/-1;
+}
+.photo3{
+  width: 100%;
+  height: 100%;
+  grid-row: 4/6;
+  grid-column: 3/6;
+}
+.photo4{
+  width: 100%;
+  height: 100%;
+  grid-row: 5/7;
+  grid-column: 9/12;
+}
+.photo5{
+  width: 100%;
+  height: 100%;
+  grid-row: 8/10;
+  grid-column: 1/4;
+}
+.photo6{
+  width: 100%;
+  height: 100%;
+  grid-row: 9/11;
+  grid-column: 8/11;
+}
 .title{
-  color: #3DD7AC;
+  width: 100%;
+  height: 100%;
+  grid-row: 1/3;
+  grid-column: 5/7;
 }
-
-.inverted{
-  -webkit-text-stroke: 1px #3DD7AC;
-  -webkit-text-fill-color: transparent;
+.article-1{
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  grid-row: 2/4;
+  grid-column: 5/8;
 }
-
-.article-whereAreWe{
-  width: 300px;
-  font-size: 16px;
+.article-2{
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  grid-row: 7/9;
+  grid-column: 5/8;
 }
-
-.hashtag{
-  margin-top: 20px;
+.superkreis{
+  width: 100%;
+  height: 100%;
+  grid-row: 4/5;
+  grid-column: 11/12;
 }
-
-.image{
-  height: 300px;
-  width: 300px;
-}
-
-.itemImage{
-  grid-column-start: 2;
-  grid-column-end: five;
-  grid-row-start: row1-start;
-  grid-row-end: 3;
-}
-
-h2 span{
-  font: 26px Monaco, MonoSpace;
-  height: 200px;
-  position: absolute;
-  width: 20px;
-  left: 0;
-  top: 0;
-  transform-origin: bottom center;
-}
-
-.char1 { transform: rotate(6deg); }
-.char2 { transform: rotate(12deg); }
-.char3 { transform: rotate(18deg); }
-.char4 { transform: rotate(24deg); }
-.char5 { transform: rotate(30deg); }
-.char6 { transform: rotate(36deg); }
-.char7 { transform: rotate(42deg); }
-.char8 { transform: rotate(48deg); }
-.char9 { transform: rotate(56deg); }
-.char10 { transform: rotate(62deg); }
-.char11 { transform: rotate(68deg); }
