--- a/src/Components/Coding/codingStyle.css
+++ b/src/Components/Coding/codingStyle.css
@@ -99,6 +99,7 @@ margin-top: -4vh;
     display: grid;
     grid-template-columns: repeat(10,1fr);
     grid-template-rows: repeat(5,1fr);
+    transition: 0.5s;
 }
 .star-div2{
     grid-row: 2/4;
@@ -107,6 +108,7 @@ margin-top: -4vh;
     display: grid;
     grid-template-columns: repeat(5,1fr);
     grid-template-rows: repeat(10,1fr);
+    transition: 0.5s;
 }
 .star-div3{
     grid-row: 4/5;
@@ -115,6 +117,7 @@ margin-top: -4vh;
     display: grid;
     grid-template-columns: repeat(10,1fr);
     grid-template-rows: repeat(5,1fr);
+    transition: 0.5s;
 }
 .programming-sec{
     background-color: #5d3ede;
@@ -163,6 +166,7 @@ top: 0vh;
 right: 100px;
 width: 0px;
 height: 0vh;
+transition: 0.2s;
 }
 .logosupercode > span{
 margin-top: 0vh;
@@ -179,97 +183,298 @@ box-shadow: 0px 0px 100px #5d3ede;
 
 /* Mobile Version */
 
-@media only screen and (max-width: 576px){
-body{
-        font-size: 10px;
-}
-.coding{
-        flex-direction: column;
-        height: fit-content;
-}
-.title-sec{
-            width: 95%;
-            display: grid;
-            grid-template-columns: 33% 33% 33% ;
-            grid-template-rows: 20% 40% 40%;
-            padding-left: 5%;
-}
-.title-sec > div{
-            grid-column: 2/3;
-            grid-row: 2/3;
-           align-self: baseline;
-           margin-top: 10vh;
-}
-.title-sec > div > i:nth-of-type(2){
-        margin-top: -2vh;
-}
-.title-sec >h1{
-            grid-row: 2/4;
-            grid-column: 1/4;
-            font-size: 5em;
 
-            width: 100%;
-}
-.title-sec >h5{
-            grid-column: 3/-1;
-            grid-row: 1/3;
-            font-weight: 600;
-            width: 200px;
-            margin-top: -95vh;
-            margin-right: -35%;
-            letter-spacing: 3px;
-            font-size: 1.5em;
-}
-.test-art{
-            width: 100%;
-            height: 70vh;
-}
-.img-sec{
-            overflow: unset;
-            display: grid;
-            grid-template-columns: 33% 33% 33%;
-            grid-template-rows: 33% 33% 33%;
-}
-.img-sec > img{
-            grid-row: 2/-1;
-            grid-column: 1/3;
-            margin-top: 10vh;
-            height: 60vh;
-}
-.star-div1{
+@media only screen and (max-width: 1140px){
+    body{
+        font-size: 20px;
+    }
+    .coding{
+            flex-direction: column;
+            height: fit-content;
+    }
+    .title-sec{
+                width: 90%;
+                display: grid;
+                grid-template-columns: 33% 33% 33% ;
+                grid-template-rows: 20% 40% 40%;
+                padding-left: 5%;
+    }
+    .title-sec > div{
+                grid-column: 2/3;
+                grid-row: 2/3;
+               align-self: baseline;
+               margin-top: 10vh;
+    }
+    .title-sec > div > i:nth-of-type(2){
+            margin-top: -2vh;
+    }
+    .title-sec >h1{
+                grid-row: 2/4;
+                grid-column: 1/4;
+                font-size: 5em;
+    
+                width: 100%;
+    }
+    .title-sec >h5{
+                grid-column: 3/-1;
+                grid-row: 1/3;
+                font-weight: 600;
+                width: 200px;
+                margin-top: -95vh;
+                margin-right: -35%;
+                letter-spacing: 3px;
+                font-size: 1.5em;
+    }
+    .test-art{
+                width: 100%;
+                height: 70vh;
+    }
+    .img-sec{
+                overflow: unset;
+                display: grid;
+                grid-template-columns: 33% 33% 33%;
+                grid-template-rows: 33% 33% 33%;
+    }
+    .img-sec > img{
+                grid-row: 2/-1;
+                grid-column: 1/3;
+                margin-top: 10vh;
+                height: 60vh;
+    }
+    .star-div1{
+                grid-column: 1/-1;
+                grid-row: 1/3;
+    }
+    .star-div2{
+        display: none;
+    }
+    .star-div3{
+        grid-column: 1/-1;
+        grid-row: 3/4;
+    }
+    .programming-sec{
+                display: block;
+                height: 100vh;
+                padding-top: 10vh;
+    }
+    .programming-sec >h1{
+                margin: 10vh 1%;
+                text-align: left;
+                font-size: 4em;
+    }
+    .programming-sec >span:nth-of-type(2){
+                font-size: 22em;
+    }
+    .logoc{
+    position: static;
+    margin-bottom: -5vh;
+    font-size: 2em;
+    }
+    .logosupercode{
+            color: #ffffff;
+    }
+    .logosupercode > span{
+            background-color: rgba(255, 222, 173, 0);
+            padding: 10px 10px;
+    }
+    }
+
+
+    @media only screen and (max-width: 786px){
+        body{
+                font-size: 14px;
+        }
+        .coding{
+                flex-direction: column;
+                height: fit-content;
+        }
+        .title-sec{
+                    width: 95%;
+                    display: grid;
+                    grid-template-columns: 33% 33% 33% ;
+                    grid-template-rows: 20% 40% 40%;
+                    padding-left: 5%;
+        }
+        .title-sec > div{
+                    grid-column: 2/3;
+                    grid-row: 2/3;
+                   align-self: baseline;
+                   margin-top: 10vh;
+        }
+        .title-sec > div > i:nth-of-type(2){
+                margin-top: -2vh;
+        }
+        .title-sec >h1{
+                    grid-row: 2/4;
+                    grid-column: 1/4;
+                    font-size: 5em;
+        
+                    width: 100%;
+        }
+        .title-sec >h5{
+                    grid-column: 3/-1;
+                    grid-row: 1/3;
+                    font-weight: 600;
+                    width: 200px;
+                    margin-top: -95vh;
+                    margin-right: -35%;
+                    letter-spacing: 3px;
+                    font-size: 1.5em;
+        }
+        .test-art{
+                    width: 100%;
+                    height: 70vh;
+        }
+        .img-sec{
+                    overflow: unset;
+                    display: grid;
+                    grid-template-columns: 33% 33% 33%;
+                    grid-template-rows: 33% 33% 33%;
+        }
+        .img-sec > img{
+                    grid-row: 2/-1;
+                    grid-column: 1/3;
+                    margin-top: 10vh;
+                    height: 60vh;
+        }
+        .star-div1{
+                    grid-column: 1/-1;
+                    grid-row: 1/3;
+        }
+        .star-div2{
+            display: none;
+        }
+        .star-div3{
             grid-column: 1/-1;
-            grid-row: 1/3;
-}
-.star-div2{
-    display: none;
-}
-.star-div3{
-    grid-column: 1/-1;
-    grid-row: 3/4;
-}
-.programming-sec{
-            display: block;
-            height: 100vh;
-            padding-top: 10vh;
-}
-.programming-sec >h1{
-            margin: 10vh 1%;
-            text-align: left;
-            font-size: 4em;
-}
-.programming-sec >span:nth-of-type(2){
-            font-size: 22em;
-}
-.logoc{
-position: static;
-margin-bottom: -5vh;
-font-size: 2em;
-}
-.logosupercode{
-        color: #ffffff;
-}
-.logosupercode > span{
-        background-color: rgba(255, 222, 173, 0);
-        padding: 10px 10px;
-}
-}
+            grid-row: 3/4;
+        }
+        .programming-sec{
+                    display: block;
+                    height: 100vh;
+                    padding-top: 10vh;
+        }
+        .programming-sec >h1{
+                    margin: 10vh 1%;
+                    text-align: left;
+                    font-size: 4em;
+        }
+        .programming-sec >span:nth-of-type(2){
+                    font-size: 22em;
+        }
+        .logoc{
+        position: static;
+        margin-bottom: -5vh;
+        font-size: 2em;
+        }
+        .logosupercode{
+                color: #ffffff;
+        }
+        .logosupercode > span{
+                background-color: rgba(255, 222, 173, 0);
+                padding: 10px 10px;
+        }
+        }
+
+
+    /* @media only screen and (max-width: 576px){
+        body{
+                font-size: 10px;
+        }
+        .coding{
+                flex-direction: column;
+                height: fit-content;
+        }
+        .title-sec{
+                    width: 95%;
+                    display: grid;
+                    grid-template-columns: 33% 33% 33% ;
+                    grid-template-rows: 20% 40% 40%;
+                    padding-left: 5%;
+        }
+        .title-sec > div{
+                    grid-column: 2/3;
+                    grid-row: 2/3;
+                   align-self: baseline;
+                   margin-top: 10vh;
+        }
+        .title-sec > div > i:nth-of-type(2){
+                margin-top: -2vh;
+        }
+        .title-sec >h1{
+                    grid-row: 2/4;
+                    grid-column: 1/4;
+                    font-size: 5em;
+        
+                    width: 100%;
+        }
+        .title-sec >h5{
+                    grid-column: 3/-1;
+                    grid-row: 1/3;
+                    font-weight: 600;
+                    width: 200px;
+                    margin-top: -95vh;
+                    margin-right: -35%;
+                    letter-spacing: 3px;
+                    font-size: 1.5em;
+        }
+        .test-art{
+                    width: 100%;
+                    height: 70vh;
+        }
+        .img-sec{
+                    overflow: unset;
+                    display: grid;
+                    grid-template-columns: 33% 33% 33%;
+                    grid-template-rows: 33% 33% 33%;
+        }
+        .img-sec > img{
+                    grid-row: 2/-1;
+                    grid-column: 1/3;
+                    margin-top: 10vh;
+                    height: 60vh;
+        }
+        .star-div1{
+                    grid-column: 1/-1;
+                    grid-row: 1/3;
+        }
+        .star-div2{
+            display: none;
+        }
+        .star-div3{
+            grid-column: 1/-1;
+            grid-row: 3/4;
+        }
+        .programming-sec{
+                    display: block;
+                    height: 100vh;
+                    padding-top: 10vh;
+        }
+        .programming-sec >h1{
+                    margin: 10vh 1%;
+                    text-align: left;
+                    font-size: 4em;
+        }
+        .programming-sec >span:nth-of-type(2){
+                    font-size: 22em;
+        }
+        .logoc{
+        position: static;
+        margin-bottom: -5vh;
+        font-size: 2em;
+        }
+        .logosupercode{
+                color: #ffffff;
+        }
+        .logosupercode > span{
+                background-color: rgba(255, 222, 173, 0);
+                padding: 10px 10px;
+        }
+        } */
+
+
+
+
+
+
+
+
