--- a/src/Components/Coding/codingStyle.css
+++ b/src/Components/Coding/codingStyle.css
@@ -10,7 +10,6 @@ background-color: white;
 }
 .test-art{
     width: 35%;
-    background-color: red;
 }
 .test-art > h1{
 position: sticky;
@@ -86,11 +85,20 @@ margin-top: -4vh;
     height: 100%;
     box-shadow: 0px 0px 5px #777777;
 }
-.img-sec > img{
+.img-sec > img:nth-of-type(1){
+    margin-top: 10vh;
+    width: 100%;
+    height: 100vh;
+    grid-row: 1/-1;
+    grid-column:2/3 ;
+    position: relative;
+}
+.img-sec > img:nth-of-type(2){
     width: 100%;
     height: 100%;
     grid-row: 2/4;
     grid-column: 2/3;
+    position: relative;
 }
 .star-div1{
     grid-row: 1/2;
@@ -212,18 +220,17 @@ box-shadow: 0px 0px 100px #5d3ede;
                 grid-row: 2/4;
                 grid-column: 1/4;
                 font-size: 5em;
-    
                 width: 100%;
     }
     .title-sec >h5{
                 grid-column: 3/-1;
                 grid-row: 1/3;
                 font-weight: 600;
-                width: 200px;
+                width: 500px;
                 margin-top: -95vh;
                 margin-right: -35%;
                 letter-spacing: 3px;
-                font-size: 1.5em;
+                font-size: 2em;
     }
     .test-art{
                 width: 100%;
@@ -235,11 +242,15 @@ box-shadow: 0px 0px 100px #5d3ede;
                 grid-template-columns: 33% 33% 33%;
                 grid-template-rows: 33% 33% 33%;
     }
-    .img-sec > img{
+    .img-sec > img:nth-of-type(2){
                 grid-row: 2/-1;
                 grid-column: 1/3;
                 margin-top: 10vh;
                 height: 60vh;
+                position: static;
+    }
+    .img-sec > img:nth-of-type(1){
+        display: none;
     }
     .star-div1{
                 grid-column: 1/-1;
@@ -263,7 +274,7 @@ box-shadow: 0px 0px 100px #5d3ede;
                 font-size: 4em;
     }
     .programming-sec >span:nth-of-type(2){
-                font-size: 22em;
+                font-size: 30em;
     }
     .logoc{
     position: static;
@@ -274,202 +285,47 @@ box-shadow: 0px 0px 100px #5d3ede;
             color: #ffffff;
     }
     .logosupercode > span{
-            background-color: rgba(255, 222, 173, 0);
-            padding: 10px 10px;
+            background-color: rgba(255, 255, 255, 0);
+            padding: 20px 30px;
+            font-size: 3em;
+            box-shadow: none;
     }
     }
 
 
     @media only screen and (max-width: 786px){
         body{
-                font-size: 14px;
-        }
-        .coding{
-                flex-direction: column;
-                height: fit-content;
-        }
-        .title-sec{
-                    width: 95%;
-                    display: grid;
-                    grid-template-columns: 33% 33% 33% ;
-                    grid-template-rows: 20% 40% 40%;
-                    padding-left: 5%;
-        }
-        .title-sec > div{
-                    grid-column: 2/3;
-                    grid-row: 2/3;
-                   align-self: baseline;
-                   margin-top: 10vh;
-        }
-        .title-sec > div > i:nth-of-type(2){
-                margin-top: -2vh;
-        }
-        .title-sec >h1{
-                    grid-row: 2/4;
-                    grid-column: 1/4;
-                    font-size: 5em;
-        
-                    width: 100%;
-        }
-        .title-sec >h5{
-                    grid-column: 3/-1;
-                    grid-row: 1/3;
-                    font-weight: 600;
-                    width: 200px;
-                    margin-top: -95vh;
-                    margin-right: -35%;
-                    letter-spacing: 3px;
-                    font-size: 1.5em;
-        }
-        .test-art{
-                    width: 100%;
-                    height: 70vh;
-        }
-        .img-sec{
-                    overflow: unset;
-                    display: grid;
-                    grid-template-columns: 33% 33% 33%;
-                    grid-template-rows: 33% 33% 33%;
-        }
-        .img-sec > img{
-                    grid-row: 2/-1;
-                    grid-column: 1/3;
-                    margin-top: 10vh;
-                    height: 60vh;
-        }
-        .star-div1{
-                    grid-column: 1/-1;
-                    grid-row: 1/3;
-        }
-        .star-div2{
-            display: none;
-        }
-        .star-div3{
-            grid-column: 1/-1;
-            grid-row: 3/4;
-        }
-        .programming-sec{
-                    display: block;
-                    height: 100vh;
-                    padding-top: 10vh;
-        }
-        .programming-sec >h1{
-                    margin: 10vh 1%;
-                    text-align: left;
-                    font-size: 4em;
-        }
-        .programming-sec >span:nth-of-type(2){
-                    font-size: 22em;
-        }
-        .logoc{
-        position: static;
-        margin-bottom: -5vh;
-        font-size: 2em;
-        }
-        .logosupercode{
-                color: #ffffff;
-        }
-        .logosupercode > span{
-                background-color: rgba(255, 222, 173, 0);
-                padding: 10px 10px;
+            font-size: 15px;
         }
         }
 
 
-    /* @media only screen and (max-width: 576px){
-        body{
-                font-size: 10px;
-        }
-        .coding{
-                flex-direction: column;
-                height: fit-content;
-        }
-        .title-sec{
-                    width: 95%;
-                    display: grid;
-                    grid-template-columns: 33% 33% 33% ;
-                    grid-template-rows: 20% 40% 40%;
-                    padding-left: 5%;
-        }
-        .title-sec > div{
-                    grid-column: 2/3;
-                    grid-row: 2/3;
-                   align-self: baseline;
-                   margin-top: 10vh;
-        }
-        .title-sec > div > i:nth-of-type(2){
-                margin-top: -2vh;
-        }
-        .title-sec >h1{
-                    grid-row: 2/4;
-                    grid-column: 1/4;
-                    font-size: 5em;
-        
-                    width: 100%;
-        }
-        .title-sec >h5{
-                    grid-column: 3/-1;
-                    grid-row: 1/3;
-                    font-weight: 600;
-                    width: 200px;
-                    margin-top: -95vh;
-                    margin-right: -35%;
-                    letter-spacing: 3px;
-                    font-size: 1.5em;
-        }
-        .test-art{
-                    width: 100%;
-                    height: 70vh;
-        }
-        .img-sec{
-                    overflow: unset;
-                    display: grid;
-                    grid-template-columns: 33% 33% 33%;
-                    grid-template-rows: 33% 33% 33%;
-        }
-        .img-sec > img{
-                    grid-row: 2/-1;
-                    grid-column: 1/3;
-                    margin-top: 10vh;
-                    height: 60vh;
-        }
-        .star-div1{
-                    grid-column: 1/-1;
-                    grid-row: 1/3;
-        }
-        .star-div2{
-            display: none;
-        }
-        .star-div3{
-            grid-column: 1/-1;
-            grid-row: 3/4;
-        }
-        .programming-sec{
-                    display: block;
-                    height: 100vh;
-                    padding-top: 10vh;
-        }
-        .programming-sec >h1{
-                    margin: 10vh 1%;
-                    text-align: left;
-                    font-size: 4em;
-        }
-        .programming-sec >span:nth-of-type(2){
-                    font-size: 22em;
-        }
-        .logoc{
-        position: static;
-        margin-bottom: -5vh;
+    @media only screen and (max-width: 576px){
+       body{
+           font-size: 12px;
+       }
+       .logosupercode > span{
         font-size: 2em;
+}
+.title-sec >h5{
+    width: 300px;
+    margin-top: -100vh;
+    margin-right: -95%;
+    font-size: 1.3em;
+}
+.title-sec >h1{
+    font-size: 4em;
+}
+.programming-sec >h1{
+    font-size: 3.6em;
+    margin-bottom: 2vh;
+}
+.programming-sec >span:nth-of-type(2){
+    font-size: 19em;
+}
+
+
         }
-        .logosupercode{
-                color: #ffffff;
-        }
-        .logosupercode > span{
-                background-color: rgba(255, 222, 173, 0);
-                padding: 10px 10px;
-        }
-        } */
 
 
 
