--- a/src/Components/hmStyle.css
+++ b/src/Components/hmStyle.css
@@ -8,22 +8,28 @@
     position: fixed;
     left: 90%;
     color: #3dd7ac;
-    margin-top: 2%;
+    
+    
+    margin-top: 1.5%;
+
     
 }
 .linkHM > span{
-    margin: -7px 0;
-    letter-spacing: -7px;
+    margin: -12px 0;
+    letter-spacing: -6px;
     font-size: 1.7em;
     font-weight: 900;
-    transition: 0.5s;
-    margin-top: 2%;
+    transition: 1s;
+    margin-top: 1.5%;
+    color: #3dd7ac;
+    
+    
 }
 .span1{
-    transform: rotate(45deg);
+    transform: rotate(405deg);
     display: block;
     position: fixed;
-    top: 2vh;
+    top: 1.5vh;
 }
 .span2{
     display: none;
@@ -32,5 +38,5 @@
     transform: rotate(130deg);
     display: block;
     position: fixed;
-    top: 2vh;
+    top: 1.5vh;
 }
