--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,7 +1,7 @@
 .bottomface{
   background: #000;
+  font-family: 'Fira Sans';
 }
-
 .topface{
   background-color: #5D3EDE;
   color: #3DD7AC;
@@ -9,20 +9,18 @@
   flex-direction: row;
   padding: 5%;
   text-align: left;
+  font-family: 'Fira Sans';
 }
-
 .outline{
-  -webkit-text-stroke: 1px #3DD7AC;
+  -webkit-text-stroke: 3px #3DD7AC;
   -webkit-text-fill-color: transparent;
 }
-
 .flex1-footer{
   display: flex;
   flex-direction: row;
   align-items: flex-end;
   justify-content: center;
 }
-
 .bottomface{
   display: flex;
   flex-direction: row;
@@ -31,12 +29,11 @@
   padding: 4%;
   font-size: 25px;
 }
-
 .text-container{
   width: 75%;
   font-size: 30px;
+  font-weight: 900;
 }
-
 .button{
   border: 4px solid #fff;
   font-size: 13px;
@@ -47,6 +44,36 @@
   color: #fff;
   text-decoration: none;
   margin-left: 25px;
+}
+
+
+@media only screen and (max-width: 1140px){
+  .bottomface{
+    flex-direction: column;
+    color: #3DD7AC;
+    padding: 6%;
+    font-size: 2.5em;
+  }
+  .topface{
+    flex-direction: column;
+  }
+  .text-container{
+    width: 100%;
+    font-size: 4em;
+    margin: 10vh 5%;
+  }
+  .button{
+    border: 10px solid #fff;
+    font-size: 2em;
+    width: 40%;
+    padding: 20px 0; 
+    margin-bottom: 10vh;
+  }
+}
+@media only screen and (max-width: 786px){
+}
+@media only screen and (max-width: 576px){
+
 }
 
 
