--- a/src/Components/Partner/Partner.css
+++ b/src/Components/Partner/Partner.css
@@ -29,3 +29,42 @@
   margin: 0 0 5% 10%;
   text-align: left;
 }
+.btn-Radio{
+ display: none;     
+}
+
+
+@media only screen and (max-width: 1140px){
+  .flex1{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(2,1fr);
+    justify-content: center;
+    grid-gap: 40px;
+  }
+  .partnerlogos{
+    margin-bottom: 3vh;
+    width: 100%;
+  }
+  .flex2{
+display: none;
+flex-direction: column;
+width: 100%;
+justify-content: center;
+align-items: center;
+  }
+  .logoX{
+    width: 400px;
+  }
+  .logoY{
+    width: 400px;
+  }
+  .btn-Radio{
+    display: inline-block;
+    height: 50px;
+    width: 50px;
+  }
+  .SuperPartner{
+    font-size: 3em;
+  }
+}
