--- a/src/Components/Coding/codingStyle.css
+++ b/src/Components/Coding/codingStyle.css
@@ -94,11 +94,12 @@ margin-top: -4vh;
     position: relative;
 }
 .img-sec > img:nth-of-type(2){
-    width: 100%;
-    height: 100%;
-    grid-row: 2/4;
+    width: 400px;
+    height: 500px;
+    grid-row: 1/4;
     grid-column: 2/3;
     position: relative;
+    margin-top: 20vh;
 }
 .star-div1{
     grid-row: 1/2;
@@ -248,6 +249,8 @@ box-shadow: 0px 0px 100px #5d3ede;
                 margin-top: 10vh;
                 height: 60vh;
                 position: static;
+                width: 300px;
+                height: 400px;
     }
     .img-sec > img:nth-of-type(1){
         display: none;
