--- a/src/Components/Coding/codingStyle.css
+++ b/src/Components/Coding/codingStyle.css
@@ -67,7 +67,7 @@ margin-top: -4vh;
     font-size: 1em;
     letter-spacing: 2px;
     justify-self: flex-end;
-    width: 20%;
+    width: 200px;
 }
 .fa-phone{
     color: teal;
@@ -214,6 +214,9 @@ box-shadow: 0px 0px 100px #5d3ede;
                align-self: baseline;
                margin-top: 10vh;
     }
+    .title-sec > div > i{
+        font-size: 1.7em;
+}
     .title-sec > div > i:nth-of-type(2){
             margin-top: -2vh;
     }
@@ -223,6 +226,9 @@ box-shadow: 0px 0px 100px #5d3ede;
                 font-size: 5em;
                 width: 100%;
     }
+    .title-sec >h1 > span{
+        -webkit-text-stroke-width: 2px;
+       }
     .title-sec >h5{
                 grid-column: 3/-1;
                 grid-row: 1/3;
@@ -249,8 +255,8 @@ box-shadow: 0px 0px 100px #5d3ede;
                 margin-top: 10vh;
                 height: 60vh;
                 position: static;
-                width: 300px;
-                height: 400px;
+                width: 600px;
+                height: 800px;
     }
     .img-sec > img:nth-of-type(1){
         display: none;
@@ -295,13 +301,18 @@ box-shadow: 0px 0px 100px #5d3ede;
     }
     }
 
-
     @media only screen and (max-width: 786px){
-        body{
+body{
             font-size: 15px;
+}
+.img-sec > img:nth-of-type(2){
+            width: 470px;
+            height: 620px;
+}
+.title-sec >h5{
+    width: 380px;
+}
         }
-        }
-
 
     @media only screen and (max-width: 576px){
        body{
@@ -318,6 +329,16 @@ box-shadow: 0px 0px 100px #5d3ede;
 }
 .title-sec >h1{
     font-size: 4em;
+}
+.title-sec >h5{
+    width: 260px;
+}
+.title-sec > div > i{
+    font-size: 1.4em;
+}
+.img-sec > img:nth-of-type(2){
+    width: 270px;
+    height: 360px;
 }
 .programming-sec >h1{
     font-size: 3.6em;
