--- a/src/Components/Coding/codingStyle.css
+++ b/src/Components/Coding/codingStyle.css
@@ -190,7 +190,7 @@ outline: none;
 box-shadow: 0px 0px 100px #5d3ede;
 }
 
-/* Mobile Version */
+/* Mobile Version(test) */
 
 
 @media only screen and (max-width: 1140px){
