--- a/src/Components/Workshop/workshop.css
+++ b/src/Components/Workshop/workshop.css
@@ -63,11 +63,13 @@
 .klappentext ul {
     list-style: none;
 }
-.klappentext div {
-    margin: 30px 0;
-}
+
 .accordion:hover {
     background-color: #5D3EDE;
+}
+.Inhalte-Details {
+    display: flex;
+    flex-direction: row;
 }
 
 
