--- a/src/Components/Campus/campusstyle.css
+++ b/src/Components/Campus/campusstyle.css
@@ -109,6 +109,7 @@
 display: grid;
 grid-template-columns: 100%;
 grid-template-rows: repeat(5,1fr);
+grid-template-rows: 10vh 30vh 40vh 10vh 20vh ;
 height: fit-content;
   }
   .superkreis{
@@ -192,14 +193,18 @@ display: none;
   .article-1{
     grid-row: 2/3;
     grid-column: 1;
+    padding: 0 5%;
   }
   .article-2{
-    grid-row: 4/5;
+    grid-row: 5/6;
     grid-column: 1;
+padding: 0 5%;
   }
   .ArrowDiv{
     display: flex;
     justify-content: space-evenly;
     font-size: 5em;
+    grid-row: 4/5;
+    grid-column: 1;
   }
 }
